@@ -26,9 +26,13 @@ public class EquipmentGymService {
     /*
     입력받은 개수(count)만큼 등록
      */
-    public void registerEquipmentInGym(Equipment equipment, Gym gym, Integer count) {
+    public void registerEquipmentInGym(Equipment equipment, Gym gym, Integer count, List<String> equipmentGymNames) {
+        if(equipmentGymNames.size() < count)
+            throw new IllegalArgumentException("EquipmentGym의 이름 개수가 부족합니다.");
+
         IntStream.range(0, count)
-                .forEach(repeat -> equipmentGymRepository.save(EquipmentGym.createEquipmentGym(equipment, gym)));
+                .forEach(repeat -> equipmentGymRepository
+                        .save(EquipmentGym.createEquipmentGym(equipment, gym, equipmentGymNames.get(repeat))));
     }
 
     /*
@@ -42,15 +46,15 @@ public class EquipmentGymService {
                 .map(EquipmentResponse::new)
                 .collect(Collectors.toList());
 
-        EquipmentGymListResponse response = new EquipmentGymListResponse(gym.getName(), allByGym.size(), equipmentResponses);
-        return response;
+        return new EquipmentGymListResponse(gym.getName(), allByGym.size(), equipmentResponses);
     }
 
     /*
     EquipmentGym의 Condition을 수정
      */
     public void updateCondition(Long equipmentGymId, Condition condition) {
-        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId).get();
+        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId)
+                .orElseThrow(IllegalArgumentException::new);
         equipmentGym.updateCondition(condition);
     }
 
@@ -58,7 +62,8 @@ public class EquipmentGymService {
     equipmentGym 삭제
      */
     public void deleteEquipmentGym(Long equipmentGymId) {
-        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId).get();
+        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId)
+                .orElseThrow(IllegalArgumentException::new);
         equipmentGymRepository.delete(equipmentGym);
     }
 
@@ -70,13 +75,12 @@ public class EquipmentGymService {
         List<EquipmentGym> allByGymAndPurpose = allByGym
                 .stream()
                 .filter(equipmentGym -> equipmentGym.getEquipment().getPurpose().equals(purpose))
-                .collect(Collectors.toList());
+                .toList();
 
         List<EquipmentResponse> equipmentResponses = allByGymAndPurpose.stream()
                 .map(EquipmentResponse::new)
                 .collect(Collectors.toList());
-        EquipmentGymListResponse response = new EquipmentGymListResponse(gym.getName(), allByGymAndPurpose.size(), equipmentResponses);
-        return response;
+        return new EquipmentGymListResponse(gym.getName(), allByGymAndPurpose.size(), equipmentResponses);
     }
 
     /*
@@ -87,14 +91,13 @@ public class EquipmentGymService {
         List<EquipmentGym> allByGymAndEquipment = allByGym
                 .stream()
                 .filter(equipmentGym -> equipmentGym.getEquipment().equals(equipment))
-                .collect(Collectors.toList());
+                .toList();
 
         List<EquipmentResponse> equipmentResponses = allByGymAndEquipment.stream()
                 .map(EquipmentResponse::new)
                 .collect(Collectors.toList());
 
-        EquipmentGymListResponse response = new EquipmentGymListResponse(gym.getName(), allByGymAndEquipment.size(), equipmentResponses);
-        return response;
+        return new EquipmentGymListResponse(gym.getName(), allByGymAndEquipment.size(), equipmentResponses);
     }
 
     /*
